tests/data/motifs/bad/test_pwms_bad2.motifscan
>MA0006.1	Ahr::Arnt	PWM
A [-0.85815	-5.68647	-5.68647	-5.68647	-5.68647	-5.68647]
C [ 0.48657	-5.32257	 1.53966	-5.32257	-5.32257	-5.32257]
G [-0.90016	 1.53922	-5.32301	 1.53922	-5.32301	 1.58174]
T [ 0.43981	-1.93828	-1.93828	-1.93828	 1.21696	-5.68779]
Cutoff_p1e-2	-0.05020516564452884
A [-0.43944	-1.43797	 0.25370	 0.37732	-1.77444	-3.29221	 1.20814	 1.19810	-3.29221	-5.68647	 1.13499	 0.58641	-0.67583	-0.24839	 0.28973	-0.20583	-0.67583]
